[package]
name = "rsautogui"
description = "rsautogui aims to be a cross-platform GUI automation rust crate."
version = "0.1.0"
edition = "2021"
keywords = ["mouse", "keyboard", "screen", "gui", "automation"]
categories = ["computer-vision", "development-tools", "api-bindings"]
license-file = "LICENSE"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enigo = "0.0.14"
scrap = "0.5.0"
image = "0.24.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
