[package]
name = "rsautogui"
description = "rsautogui aims to be a cross-platform GUI automation rust crate."
version = "0.1.2"
edition = "2021"
keywords = ["mouse", "keyboard", "screen", "pyautogui", "automation"]
categories = ["computer-vision", "development-tools", "api-bindings"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rcsaquino/rsautogui"
repository = "https://github.com/rcsaquino/rsautogui"
documentation = "https://docs.rs/rsautogui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enigo = "0.0.14"
scrap = "0.5.0"
image = "0.24.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
