[package]
name = "rsautogui"
description = "rsautogui aims to be a cross-platform GUI automation rust crate."
version = "0.2.0"
edition = "2021"
keywords = ["mouse", "keyboard", "screen", "pyautogui", "automation"]
categories = ["computer-vision", "development-tools", "api-bindings"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rcsaquino/rsautogui"
repository = "https://github.com/rcsaquino/rsautogui"
documentation = "https://docs.rs/rsautogui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
screenshots = "0.5.3"
image = "0.24.6"
winput = "0.2.5"
spin_sleep = "1.1.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
